FIX: spaces between form inputs on mobile devices

--- a/src/components/Sidebar/styles.module.scss
+++ b/src/components/Sidebar/styles.module.scss
@@ -32,6 +32,8 @@
     border-radius: 20px 20px 0 0;
 
     .brandLogo {
+      width: 75px;
+      height: 75px;
       position: fixed;
       top: 0;
       left: 1rem;
