--- a/src/pages/NewVacancy/styles.module.scss
+++ b/src/pages/NewVacancy/styles.module.scss
@@ -33,7 +33,8 @@
     gap: 1rem;
 
     @media(max-width: 768px) {
-      display: block;
+      display: flex;
+      flex-direction: column;
     }
   }
 
@@ -316,6 +317,7 @@
   gap: 1rem;
 
   @media(max-width: 768px) {
-    display: block;
+    display: flex;
+    flex-direction: column;
   }
 }
